--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,15 @@ jobs:
     steps:
       - name: Install GitHub CLI
         run: |
-          Invoke-WebRequest -Uri "https://github.com/cli/cli/releases/latest/download/gh_$(Invoke-RestMethod -Uri 'https://api.github.com/repos/cli/cli/releases/latest' | ConvertFrom-Json).msi" -OutFile "gh-installer.msi"
-          Start-Process "msiexec.exe" -ArgumentList "/i gh-installer.msi /quiet /norestart" -NoNewWindow -Wait
-          gh --version
+          $response = Invoke-RestMethod -Uri 'https://api.github.com/repos/cli/cli/releases/latest'
+          if ($response -ne $null) {
+              $downloadUrl = "https://github.com/cli/cli/releases/latest/download/gh_$($response.tag_name).msi"
+              Invoke-WebRequest -Uri $downloadUrl -OutFile "gh-installer.msi"
+              Start-Process "msiexec.exe" -ArgumentList "/i gh-installer.msi /quiet /norestart" -NoNewWindow -Wait
+              gh --version
+          } else {
+              Write-Error "Failed to retrieve the latest GitHub CLI release information."
+          }
           
       - name: Create binaries directory
         run: |
