--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,45 @@
-name: CI
+name: Windows Build and Release
+
 on:
   push:
-    branches: 
-      - master
+    branches:
+      - main
 
 jobs:
-  build-windows:
+  build:
     runs-on: windows-latest
+
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: Install GitHub CLI
-        run: |
-          choco install gh -y
-          gh --version
 
-      - name: Prepare Release Files
-        run: |
-          $RELEASE_PATH = "./release/1.1.1/win/auto"
-          New-Item -Path $RELEASE_PATH -ItemType Directory -Force
-          New-Item -Path "$RELEASE_PATH/Msty_x64.exe" -ItemType File -Force
+      - name: Create directory
+        run: mkdir -p release/win/1.1.1
 
-      - name: Upload Windows-auto files
+      - name: Create dummy file
+        run: echo "This is a dummy executable file." > release/win/1.1.1/Msty.exe
+
+      - name: Upload Release Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: Msty
+          path: release/win/1.1.1/Msty.exe
+
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: 'v1.1.1'
+          release_name: 'Release 1.1.1'
+          draft: false
+          prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the correct reference
-        run: |
-          gh release create 1.1.1 `
-          --title 1.1.1 `
-          --notes "Automated release from GitHub Actions" `
-          "./release/1.1.1/win/auto/Msty_x64.exe"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: 'v1.1.1'
+          files: release/win/1.1.1/Msty.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
