--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,15 +33,13 @@ jobs:
           release_name: 'Release 1.1.1'
           draft: false
           prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          repository: anishghimire862/releases-test-artifacts
+          token: ${{ secrets.TARGET_REPO }}
 
       - name: Upload to Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: 'v1.1.1'
-          repository: anishghimire862/releases-test
+          repository: anishghimire862/releases-test-artifacts
           files: release/win/1.1.1\Msty.exe
           token: ${{ secrets.TARGET_REPO }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
