--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,5 +41,5 @@ jobs:
         with:
           tag_name: 'v1.1.1'
           repository: anishghimire862/releases-test-artifacts
-          files: release/win/1.1.1
+          files: release/win/1.1.1/
           token: ${{ secrets.TARGET_REPO }}
