--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,5 +41,7 @@ jobs:
         with:
           tag_name: 'v1.1.1'
           repository: anishghimire862/releases-test-artifacts
-          files: release/win/1.1.1/
+          files: |
+            release/win/1.1.1#auto/Msty.exe
+            release/win/1.1.1#cpu/Msty.exe
           token: ${{ secrets.TARGET_REPO }}
