--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,23 +25,30 @@ jobs:
           name: Msty
           path: release/win/1.1.1/Msty.exe
 
-      - name: Create Release
-        id: create_release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: 'v1.1.1'
-          release_name: 'Release 1.1.1'
-          draft: false
-          prerelease: false
-          repository: anishghimire862/releases-test-artifacts
-          token: ${{ secrets.TARGET_REPO }}
+      - name: Prepare files for upload
+        run: |
+          mkdir temp_upload
+          copy release/win/1.1.1/Msty.exe temp_upload\
 
-      - name: Upload to Release
-        uses: softprops/action-gh-release@v2
+
+      - name: Upload artifacts
+        uses: ryand56/r2-upload-action@latest
         with:
-          tag_name: 'v1.1.1'
-          repository: anishghimire862/releases-test-artifacts
-          files: |
-            release/win/1.1.1/Msty.exe#auto/Msty.exe
-            release/win/1.1.1/Msty.exe#cpu/Msty.exe
-          token: ${{ secrets.TARGET_REPO }}
+          r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
+          r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
+          r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+          r2-bucket: ${{ secrets.R2_BUCKET }}
+          source-dir: temp_upload/
+          destination-dir: win/auto
+          keep-file-fresh: true
+
+
+      - name: Upload artifacts
+      - uses: ryand56/r2-upload-action@latest
+        with:
+          r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
+          r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
+          r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+          r2-bucket: ${{ secrets.R2_BUCKET }}
+          source-dir: release/win/1.1.1/Msty.exe
+          destination-dir: ./
