--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,4 @@ jobs:
           r2-bucket: ${{ secrets.R2_BUCKET }}
           source-dir: temp_upload/
           destination-dir: win-auto
+          keep-file-fresh: true
