--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,52 +18,51 @@ jobs:
         id: extract_version
         run: |
           VERSION=$(jq -r .version package.json)
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "TAG_VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Set ENV for macOS
+      - name: Build
         run: |
-          echo "TAG_VERSION=${{ env.VERSION }}" >> $GITHUB_ENV
           echo "Building macOS with version: $TAG_VERSION"
 
-  build-linux:
-    if: startsWith(github.ref, 'refs/heads/rel/linux') || github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
+  # build-linux:
+  #   if: startsWith(github.ref, 'refs/heads/rel/linux') || github.ref == 'refs/heads/master'
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Check out Git repository
+  #       uses: actions/checkout@v3
 
-      - name: Extract version from package.json
-        id: extract_version
-        run: |
-          VERSION=$(jq -r .version package.json)
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+  #     - name: Extract version from package.json
+  #       id: extract_version
+  #       run: |
+  #         VERSION=$(jq -r .version package.json)
+  #         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Set ENV for Linux
-        run: |
-          echo "TAG_VERSION=${{ env.VERSION }}" >> $GITHUB_ENV
-          echo "Building Linux with version: $TAG_VERSION"
+  #     - name: Set ENV for Linux
+  #       run: |
+  #         echo "TAG_VERSION=${{ env.VERSION }}" >> $GITHUB_ENV
+  #         echo "Building Linux with version: $TAG_VERSION"
 
-  build-windows:
-    if: startsWith(github.ref, 'refs/heads/rel/windows/') || github.ref == 'refs/heads/master'
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        build-config: [ win-auto, win-cpu ]
+  # build-windows:
+  #   if: startsWith(github.ref, 'refs/heads/rel/windows/') || github.ref == 'refs/heads/master'
+  #   runs-on: windows-latest
+  #   strategy:
+  #     matrix:
+  #       build-config: [ win-auto, win-cpu ]
 
-    steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Check out Git repository
+  #       uses: actions/checkout@v3
 
-      - name: Extract version from package.json
-        id: extract_version
-        shell: pwsh
-        run: |
-          $VERSION = (Get-Content package.json | ConvertFrom-Json).version
-          echo "VERSION=$VERSION" >> $env:GITHUB_ENV
+  #     - name: Extract version from package.json
+  #       id: extract_version
+  #       shell: pwsh
+  #       run: |
+  #         $VERSION = (Get-Content package.json | ConvertFrom-Json).version
+  #         echo "VERSION=$VERSION" >> $env:GITHUB_ENV
 
-      - name: Set ENV for Windows
-        shell: pwsh
-        run: |
-          echo "TAG_VERSION=$env:VERSION" >> $env:GITHUB_ENV
-          echo "Building Windows with version: $TAG_VERSION"
+  #     - name: Set ENV for Windows
+  #       shell: pwsh
+  #       run: |
+  #         echo "TAG_VERSION=$env:VERSION" >> $env:GITHUB_ENV
+  #         echo "Building Windows with version: $TAG_VERSION"
