--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,13 +20,13 @@ jobs:
           VERSION=$(jq -r .version package.json)
           echo "TAG_VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Build
+      - name: Build for rel
         if: startsWith(github.ref, 'refs/heads/rel/')
         run: |
           echo "Building macOS with version: ${{ env.TAG_VERSION }}. Beta build.."
 
-      - name: Build
-        if: startsWith(github.ref, 'refs/heads/master/')
+      - name: Build for master
+        if: startsWith(github.ref, 'refs/heads/master')
         run: |
           echo "Building macOS with version: ${{ env.TAG_VERSION }}. Prod build.."
 
