--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           echo "Building macOS with version: ${{ env.TAG_VERSION }}. Beta build.."
 
       - name: Build for master
-        if: startsWith(github.ref, 'refs/heads/master')
+        if: github.ref == 'refs/heads/master'
         run: |
           echo "Building macOS with version: ${{ env.TAG_VERSION }}. Prod build.."
 
@@ -49,7 +49,7 @@ jobs:
           echo "Building Linux with version: ${{ env.TAG_VERSION }}. Beta build.."
 
       - name: Build for master
-        if: startsWith(github.ref, 'refs/heads/master')
+        if: github.ref == 'refs/heads/master'
         run: |
           echo "Building Linux with version: ${{ env.TAG_VERSION }}. Prod build.."
 
@@ -73,7 +73,7 @@ jobs:
           echo "Building Windows with version: ${{ env.TAG_VERSION }}. Beta build.."
 
       - name: Build for master
-        if: startsWith(github.ref, 'refs/heads/master')
+        if: github.ref == 'refs/heads/master'
         run: |
           echo "Building Windows with version: ${{ env.TAG_VERSION }}. Prod build.."
 
