--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,8 @@ jobs:
 
   build-windows:
     runs-on: windows-latest
-    
+
+    if: "!contains(github.event.head_commit.message, '[skip-win]')"
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v3
