--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,12 +69,12 @@ jobs:
 
           if ("${{ matrix.build-config }}" -eq 'win-auto' -and $commitMessage -like '*`[skip-win-auto`]*') {
             Write-Host "Skipping win-auto build due to '[skip-win-auto]' in commit message."
-            return
+            exit 0
           }
 
           if ("${{ matrix.build-config }}" -eq 'win-cpu' -and $commitMessage -like '*`[skip-win-cpu`]*') {
             Write-Host "Skipping win-cpu build due to '[skip-win-cpu]' in commit message."
-            return
+            exit 0
           }
 
       - name: Check out Git repository
