--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,22 +79,22 @@ jobs:
           }
 
       - name: Check out Git repository
-        if: ${{ env.SKIP != true }}
+        if: ${{ env.SKIP != 'true' }}
         uses: actions/checkout@v3
 
       - name: Extract version from package.json
-        if: ${{ env.SKIP != true }}
+        if: ${{ env.SKIP != 'true' }}
         run: |
           $VERSION = (Get-Content package.json | ConvertFrom-Json).version
           echo "TAG_VERSION=$VERSION" >> $env:GITHUB_ENV
 
       - name: Build for rel
-        if: ${{ env.SKIP != true }} && startsWith(github.ref, 'refs/heads/rel/')
+        if: ${{ env.SKIP != 'true' }} && startsWith(github.ref, 'refs/heads/rel/')
         run: |
           echo "Building Windows with version: ${{ env.TAG_VERSION }}. Beta build.."
 
       - name: Build for master
-        if: ${{ env.SKIP != true }} && github.ref == 'refs/heads/master'
+        if: ${{ env.SKIP != 'true' }} && github.ref == 'refs/heads/master'
         run: |
           echo "Building Windows with version: ${{ env.TAG_VERSION }}. Prod build.."
 
