--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,12 +89,12 @@ jobs:
           echo "TAG_VERSION=$VERSION" >> $env:GITHUB_ENV
 
       - name: Build for rel
-        if: ${{ env.SKIP != 'true' }} && startsWith(github.ref, 'refs/heads/rel/')
+        if: ${{ env.SKIP != 'true' && startsWith(github.ref, 'refs/heads/rel/') }}
         run: |
           echo "Building Windows with version: ${{ env.TAG_VERSION }}. Beta build.."
 
       - name: Build for master
-        if: ${{ env.SKIP != 'true' }} && github.ref == 'refs/heads/master'
+        if: ${{ env.SKIP != 'true' && github.ref == 'refs/heads/master' }}
         run: |
           echo "Building Windows with version: ${{ env.TAG_VERSION }}. Prod build.."
 
