--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,26 +32,58 @@ jobs:
 
   build-linux:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        build-config: [ lin-amd64, lin-rocm ]
 
+    if: "!contains(github.event.head_commit.message, '[skip-linux]')"
     steps:
+      - name: Check skip condition
+        run: |
+          commitMessage="${{ github.event.head_commit.message }}"
+          echo "Commit message: $commitMessage"
+
+          if [[ "${{ matrix.build-config }}" == "lin-amd64" && "$commitMessage" == *"[skip-lin-amd64]"* ]]; then
+            echo "Skipping lin-amd64 build due to '[skip-lin-amd64]' in commit message."
+            echo "SKIP=true" >> $GITHUB_ENV
+          elif [[ "${{ matrix.build-config }}" == "lin-rocm" && "$commitMessage" == *"[skip-lin-rocm]"* ]]; then
+            echo "Skipping lin-rocm build due to '[skip-lin-rocm]' in commit message."
+            echo "SKIP=true" >> $GITHUB_ENV
+          else
+            echo "SKIP=false" >> $GITHUB_ENV
+          fi
+
       - name: Check out Git repository
+        if: ${{ env.SKIP != 'true' }}
         uses: actions/checkout@v3
 
       - name: Extract version from package.json
+        if: ${{ env.SKIP != 'true' }}
         id: extract_version
         run: |
           VERSION=$(jq -r .version package.json)
           echo "TAG_VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Set R2 destination directory for production release
+        if: ${{ env.SKIP != 'true' && github.ref == 'refs/heads/master' }}
+        run: |
+          echo "R2_DESTINATION_DIR=aurum/prod/${{ env.TAG_VERSION }}/linux" >> $GITHUB_ENV
+
+      - name: Set R2 destination directory for beta release
+        if: ${{ env.SKIP != 'true' && startsWith(github.ref, 'refs/heads/rel/') }}
+        run: |
+          TIMESTAMP=$(date +%Y%m%d%H%M%S)
+          echo "R2_DESTINATION_DIR=aurum/${{ env.TAG_VERSION }}/$TIMESTAMP/linux" >> $GITHUB_ENV
             
       - name: Build for rel
         if: startsWith(github.ref, 'refs/heads/rel/')
         run: |
-          echo "Building Linux with version: ${{ env.TAG_VERSION }}. Beta build.."
+          echo "Building Linux with version: ${{ env.TAG_VERSION }}. Beta build.. ${{ env.R2_DESTINATION_DIR }}"
 
       - name: Build for master
         if: github.ref == 'refs/heads/master'
         run: |
-          echo "Building Linux with version: ${{ env.TAG_VERSION }}. Prod build.."
+          echo "Building Linux with version: ${{ env.TAG_VERSION }}. Prod build.. ${{ env.R2_DESTINATION_DIR }}"
 
 
   build-windows:
